# firelord

./: .gitignore  .isort.cfg  README.md  app.py  cli.py  hackathon.ipynb  pyproject.toml  readme.md  requirements.txt
.store/: ozai_latest.model
api/: main.py  profiles.py  scoring.py
firelord/: data.py  model.py  preprocess.py
tests/: test_data.py  test_firelord.py
